--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,7 +3,12 @@
   margin: 0;
   box-sizing: border-box;
 }
-
-body {
-  height: 100vh;
+a {
+  color: #1677ff;
+  text-decoration: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+  transition: color 0.3s;
+  -webkit-text-decoration-skip: objects;
 }
